new program of Aalphabaticalorder

--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,6 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>food</td><td>TestNG_8_Group_TestCase_XML_Suite.zomato()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]<br/></td></tr>
-<tr><td>mail</td><td>TestNG_8_Group_TestCase_XML_Suite.gmail()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]<br/></td></tr>
-<tr><td>social</td><td>TestNG_8_Group_TestCase_XML_Suite.facebook()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]<br/>TestNG_8_Group_TestCase_XML_Suite.twitter()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]<br/>TestNG_8_Group_TestCase_XML_Suite.google()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]<br/></td></tr>
-<tr><td>tech</td><td>TestNG_8_Group_TestCase_XML_Suite.redmine()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]<br/>TestNG_8_Group_TestCase_XML_Suite.selenium()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]<br/>TestNG_8_Group_TestCase_XML_Suite.seleniumlearn()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
