--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:28:36</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_8_Group_TestCase_XML_Suite.beforeTest()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:37:41</td>   <td>544945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_8_Group_TestCase_XML_Suite.twitter()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">twitter</td> 
-  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:37:41</td>   <td>544991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_8_Group_TestCase_XML_Suite.zomato()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">zomato</td> 
-  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:36:44</td>   <td>487922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_8_Group_TestCase_XML_Suite.seleniumlearn()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">seleniumlearn</td> 
-  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:37:41</td>   <td>544998</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_8_Group_TestCase_XML_Suite.afterTest()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:33:44</td>   <td>307910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_8_Group_TestCase_XML_Suite.selenium()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">selenium</td> 
-  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:30:09</td>   <td>93146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_8_Group_TestCase_XML_Suite.gmail()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">gmail</td> 
-  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:30:44</td>   <td>127823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_8_Group_TestCase_XML_Suite.redmine()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">redmine</td> 
-  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:29:50</td>   <td>74323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_8_Group_TestCase_XML_Suite.facebook()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">facebook</td> 
-  <td>main@193178046</td>   <td></td> </tr>
-<tr bgcolor="b7b9d6">  <td>24/03/05 15:30:28</td>   <td>112100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_8_Group_TestCase_XML_Suite.google()[pri:0, instance:testng.TestNG_8_Group_TestCase_XML_Suite@4f4c4b1a]">google</td> 
-  <td>main@193178046</td>   <td></td> </tr>
+<tr bgcolor="b7b9d6">  <td>24/03/08 14:56:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_9_Aalphabatical_Order.twitter()[pri:0, instance:testng.TestNG_9_Aalphabatical_Order@4ea5b703]">twitter</td> 
+  <td>main@154449611</td>   <td></td> </tr>
+<tr bgcolor="b7b9d6">  <td>24/03/08 14:55:50</td>   <td>-57837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_9_Aalphabatical_Order.gmail()[pri:0, instance:testng.TestNG_9_Aalphabatical_Order@4ea5b703]">gmail</td> 
+  <td>main@154449611</td>   <td></td> </tr>
+<tr bgcolor="b7b9d6">  <td>24/03/08 14:54:52</td>   <td>-115959</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_9_Aalphabatical_Order.beforeTest()[pri:0, instance:testng.TestNG_9_Aalphabatical_Order@4ea5b703]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@154449611</td>   <td></td> </tr>
+<tr bgcolor="b7b9d6">  <td>24/03/08 14:55:37</td>   <td>-70954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_9_Aalphabatical_Order.flipkart()[pri:0, instance:testng.TestNG_9_Aalphabatical_Order@4ea5b703]">flipkart</td> 
+  <td>main@154449611</td>   <td></td> </tr>
+<tr bgcolor="b7b9d6">  <td>24/03/08 14:56:04</td>   <td>-44312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_9_Aalphabatical_Order.redmine()[pri:0, instance:testng.TestNG_9_Aalphabatical_Order@4ea5b703]">redmine</td> 
+  <td>main@154449611</td>   <td></td> </tr>
+<tr bgcolor="b7b9d6">  <td>24/03/08 14:56:55</td>   <td>6658</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_9_Aalphabatical_Order.afterTest()[pri:0, instance:testng.TestNG_9_Aalphabatical_Order@4ea5b703]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@154449611</td>   <td></td> </tr>
+<tr bgcolor="b7b9d6">  <td>24/03/08 14:56:38</td>   <td>-10368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_9_Aalphabatical_Order.schools9()[pri:0, instance:testng.TestNG_9_Aalphabatical_Order@4ea5b703]">schools9</td> 
+  <td>main@154449611</td>   <td></td> </tr>
+<tr bgcolor="b7b9d6">  <td>24/03/08 14:56:43</td>   <td>-5358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_9_Aalphabatical_Order.selenium()[pri:0, instance:testng.TestNG_9_Aalphabatical_Order@4ea5b703]">selenium</td> 
+  <td>main@154449611</td>   <td></td> </tr>
 </table>
