--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testng.TestNG_8_Group_TestCase_XML_Suite</td>
+<td>testng.TestNG_9_Aalphabatical_Order</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,43 +12,27 @@
 <tr>
 <td>&nbsp;</td>
 <td>gmail</td>
-<td>mail </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>redmine</td>
-<td>tech </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>seleniumlearn</td>
-<td>tech </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>twitter</td>
-<td>social </td>
-</tr>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>schools9</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>selenium</td>
-<td>tech </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>facebook</td>
-<td>social </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>zomato</td>
-<td>food </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>google</td>
-<td>social </td>
-</tr>
+<td>flipkart</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
